--- a/SwissPharm/css/style.css
+++ b/SwissPharm/css/style.css
@@ -770,8 +770,10 @@ button {
   .navigation-top {
     display: flex;
     position: fixed;
-    height: 50px;
-    top: 20px;
+    height: 80px;
+    top: 0px;
+    left: 0;
+    padding: 14px;
     z-index: 5;
     background: #d90813;
 }
