--- a/SwissPharm/css/style.css
+++ b/SwissPharm/css/style.css
@@ -134,7 +134,8 @@ div {
   border: 1px solid #2A0000;
   display: flex;
   align-items: center;
-  margin-right: 455px;
+  /*margin-right: 455px;*/
+  margin-right: 535px;
 }
 
 
