--- a/SwissPharm/css/style.css
+++ b/SwissPharm/css/style.css
@@ -159,6 +159,36 @@ div {
   margin: auto;
 }
 
+.none {
+  display: none;
+}
+
+.show1 {
+  animation: show1 1s forwards;
+  display: block;
+  position: fixed;
+  top: 250px;
+  left: 25px;
+}
+@keyframes show1 {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.hide1 {
+  animation: hide1 1s forwards;
+}
+@keyframes hide1 {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 .header-title_main {
   font-size: 56px;
   color: white;
@@ -287,6 +317,7 @@ h1 {
 }
 
 .nav-block_black {
+  opacity: 0;
   width: 185px;
   height: 185px;
   background-color: #2A0000;
@@ -295,12 +326,18 @@ h1 {
 }
 
 .nav-block_white {
+  opacity: 0;
   width: 185px;
   height: 185px;
   background-color: white;
   text-align: right;
   padding: 15px;
 }
+
+/*.nav-block_black1 {*/
+/*  position: fixed;*/
+/*}*/
+
 
 .nav-active {
   color: #D90913 !important;
