--- a/SwissPharm/css/style.css
+++ b/SwissPharm/css/style.css
@@ -974,6 +974,10 @@ button {
     left: 215px;
   }
 
+  #menu li::before {
+  content: '' !important;
+}
+
 
 /*@media screen and (max-width: 450px) {*/
 
