--- a/SwissPharm/css/style.css
+++ b/SwissPharm/css/style.css
@@ -827,6 +827,7 @@ button {
   .navigation-top {
     display: flex;
     position: fixed;
+    width: 100%;
     height: 80px;
     top: 0px;
     left: 0;
