--- a/AlphaPharmaceutical/css/style.css
+++ b/AlphaPharmaceutical/css/style.css
@@ -887,6 +887,18 @@ form button {
   /*  border-radius: 10px;*/
   /*  margin-left: 10px;*/
   /*}*/
+  .block-1-content {
+    width: 95vw;
+  }
+  .block-1-title {
+    display: none;
+  }
+  .block-2-title {
+    display: none;
+  }
+  .block-3-title {
+    display: none;
+  }
 }
 
 
