--- a/AlphaPharmaceutical/css/style.css
+++ b/AlphaPharmaceutical/css/style.css
@@ -874,6 +874,9 @@ form button {
 
 
 @media screen and (max-width: 1024px) {
+  .header-title h1 {
+    font-size: 32px;
+  }
 
   #menu li a {
     font-size: 20px;
