--- a/AlphaPharmaceutical/css/style.css
+++ b/AlphaPharmaceutical/css/style.css
@@ -140,7 +140,7 @@ sup {
   width: 65vw;
   justify-content: flex-end;
   text-align: right;
-  padding: 1vw 7vw;
+  padding: 13px 7vw;
   text-transform: uppercase;
 }
 .navigation-menu a {
