--- a/AlphaPharmaceutical/css/style.css
+++ b/AlphaPharmaceutical/css/style.css
@@ -884,6 +884,10 @@ form button {
     text-decoration: none;
   }
 
+  .block-2-plate {
+    padding: 10px;
+  }
+
   /*#menu li:last-child a {*/
   /*  border: 1px solid rgba(60, 60, 60, 0.4);*/
   /*  padding: 10px;*/
