--- a/Tansilotren-AZ/css/style.css
+++ b/Tansilotren-AZ/css/style.css
@@ -4,7 +4,6 @@
   font-family: 'HNB';
   src: url('../fonts/HelveticaNeueCyr-Black.ttf');
   font-style: normal;
-  /*font-weight: 400;*/
 }
 
 @font-face {
@@ -179,11 +178,11 @@ div {
 
 .header-main-center {
   margin-top: 0;
-  font-family: 'HNL', sans-serif;
+  /*font-family: 'HNL', sans-serif;*/
 }
 
 .header-block-2 {
-  font-family: 'HNL', sans-serif;
+  /*font-family: 'HNL', sans-serif;*/
   line-height: 18px;
 }
 
@@ -264,17 +263,17 @@ div {
   font-size: 68px;
   color: #a00067;
   /*font-weight: 900;*/
-  font-family: 'HNB';
+  /*font-family: 'HNB';*/
 }
 
 .header-title p {
   text-transform: uppercase;
   font-size: 25px;
-  font-family: 'HNL';
+  /*font-family: 'HNL';*/
 }
 
 .header-title strong {
-  font-family: 'HNB';
+  /*font-family: 'HNB';*/
 }
 
 .header-main-product-img {
@@ -399,7 +398,7 @@ h1 {
   font-size: 25px;
   line-height: 30px;
   text-transform: uppercase;
-  font-family: 'HNB';
+  /*font-family: 'HNB';*/
 }
 
 h2 {
@@ -409,11 +408,11 @@ h2 {
   line-height: 30px;
   text-transform: uppercase;
   margin-bottom: 100px;
-  font-family: 'HNB', sans-serif;
+  /*font-family: 'HNB', sans-serif;*/
 }
 h2 b {
   color: #636363;
-  font-family: 'HNT', sans-serif;
+  /*font-family: 'HNT', sans-serif;*/
 }
 
 .block-interactive-inner {
@@ -445,7 +444,7 @@ h2 b {
   justify-content: center;
   width: 25%;
   border-right: 1px solid #d0d0d0;
-  font-family: 'HNB';
+  /*font-family: 'HNB';*/
   cursor: pointer;
 }
 
@@ -456,7 +455,7 @@ h2 b {
   line-height: 16px;
   display: flex;
   align-items: center;
-  font-family: 'HNC';
+  /*font-family: 'HNC';*/
 }
 
 .block-4__buttons div::before {
@@ -493,13 +492,13 @@ h2 b {
 }
 
 .block-4__container-content p {
-  font-family: 'HNL';
+  /*font-family: 'HNL';*/
   /*color: #a1a1a1;*/
 }
 
 .block-4__container-content b {
   color: #a00067;
-  font-family: 'HNC';
+  /*font-family: 'HNC';*/
 }
 
 .block-4__container-img {
@@ -552,7 +551,7 @@ h2 b {
 
 .block-3 h1 {
     margin-top: 50px;
-    font-family: 'HNB';
+    /*font-family: 'HNB';*/
 }
 
 .block-3_inner {
@@ -583,7 +582,7 @@ h2 b {
 .plate p {
   margin: 25px 0;
   text-align: center;
-  font-family: 'HNL';
+  /*font-family: 'HNL';*/
   line-height: 20px;
   min-height: 100px;
 }
@@ -676,7 +675,7 @@ h2 b {
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.3s ease-out;
-  font-family: 'HNC', sans-serif;
+  /*font-family: 'HNC', sans-serif;*/
 }
 
 .panel__checklist p::before {
@@ -700,7 +699,7 @@ h2 b {
   font-size: 16px;
   line-height: 20px;
   margin-bottom: 30px;
-  font-family: 'HNL';
+  /*font-family: 'HNL';*/
 }
 
 .panel__sub p {
@@ -709,7 +708,7 @@ h2 b {
 
 .panel b {
   color: #a00067;
-  font-family: 'HNC';
+  /*font-family: 'HNC';*/
 }
 
 .panel-after {
@@ -762,11 +761,11 @@ h2 b {
   line-height: 29px;
   text-transform: uppercase;
   margin: 0;
-  font-family: 'HNT';
+  /*font-family: 'HNT';*/
 }
 
 .block-5__text h4 b {
-  font-family: 'HNB';
+  /*font-family: 'HNB';*/
 }
 
 .block-5__un_plate {
@@ -779,12 +778,12 @@ h2 b {
   margin: 40px 0;
   margin-bottom: 0;
   color: #636363;
-  font-family: 'HNL';
+  /*font-family: 'HNL';*/
 }
 
 .block-5__text p b {
   color: #a00067;
-  font-family: 'HNC';
+  /*font-family: 'HNC';*/
 }
 
 .block-5__popup {
@@ -811,7 +810,7 @@ h2 b {
   font-size: 14px;
   line-height: 18px;
   color: #828282;
-  font-family: 'HNL';
+  /*font-family: 'HNL';*/
 }
 
 .map-text ol {
@@ -823,7 +822,7 @@ h2 b {
   /*background: url('../images/bg.png');*/
   padding: 20px 0;
   width: 80vw;
-  font-family: 'HNC';
+  /*font-family: 'HNC';*/
 }
 
 .disclamer-tra ol {
@@ -832,14 +831,14 @@ h2 b {
 
 .disclamer-tra li {
   color: grey;
-  font-family: 'HNC';
+  /*font-family: 'HNC';*/
 }
 
 .disclamer-tra p {
   margin-bottom: 0;
   color: grey;
   text-align: center;
-  font-family: 'HNT';
+  /*font-family: 'HNT';*/
 }
 
 .disclamer-tra .logos-container {
@@ -852,7 +851,7 @@ h2 b {
 }
 
 .logos-container p b {
-  font-family: 'HNB';
+  /*font-family: 'HNB';*/
 }
 
 .disclamer-tra__logo {
@@ -901,10 +900,44 @@ h2 b {
   text-align: center;
   color: #8b8b8b;
   margin: 40px 0;
-  font-family: 'HNT';
+  /*font-family: 'HNT';*/
   font-weight: lighter;
 }
 
+
+
+.apt-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.apt-container a {
+  width: 200px;
+  height: 100px;
+  margin: 20px;
+  padding: 5px;
+  border-radius: 20px;
+  background: url("../images/aptekonline_kanon.jpg") no-repeat;
+  background-position: center !important;
+  background-size: 80% !important;
+    background-color: white !important;
+    box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
+}
+
+.apt-container a:nth-child(2) {
+  background: url("../images/zeferan.jpg") no-repeat center / contain;
+}
+.apt-container a:nth-child(3) {
+  background: url("../images/aptekstore.jpg") no-repeat center / contain;
+}
+.apt-container a:nth-child(4) {
+  background: url("../images/ozonaptek.jpg") no-repeat center / contain;
+}
+.apt-container a:nth-child(5) {
+  background: url("../images/melhem.jpg") no-repeat center / contain;
+}
 /*popup/////////*/
 
 
@@ -974,7 +1007,7 @@ h2 b {
   line-height: 20px;
   text-align: left !important;
   color: #454a54;
-  font-family: 'HNC', sans-serif;
+  /*font-family: 'HNC', sans-serif;*/
   margin-top: 30px;
   margin-bottom: 45px;
   }
