--- a/prospan-new/css/style.css
+++ b/prospan-new/css/style.css
@@ -158,7 +158,7 @@ div {
 
 .header-block_outer {
   width: 100%;
-  background: url("../images/bg.jpg") no-repeat 70% 90% / auto;
+  background: url("../images/bg.jpg") no-repeat 63% 90% / auto;
 }
 
 .header-block_inner {
@@ -169,20 +169,20 @@ div {
 
 .header-block_content h1 {
   font-family: 'DLeB';
-  font-size: 72px;
+  font-size: 67px;
   line-height: 68px;
   margin: 0;
   max-width: 600px;
   text-align: left;
   position: relative;
-  top: 110px;
+  top: 135px;
   left: 75px;
   color: #004494;
 }
 
 .header-block_img {
   position: relative;
-  top: 125px;
+  top: 160px;
   left: 75px;
   width: 290px;
   height: 400px;
@@ -199,7 +199,7 @@ div {
 }
 
 h2 {
-  font-family: 'DLR';
+  font-family: 'DR';
   font-size: 42px;
   line-height: 46px;
   text-align: center;
@@ -224,7 +224,7 @@ h2 {
 }
 
 .block-1_inner h2 {
-  margin-top: 100px;
+  margin-top: 130px;
 }
 
 .block-1_inner p {
@@ -423,7 +423,7 @@ h4 {
   font-size: 20px;
   color: #004494;
   margin: 5px 0 5px;
-  font-weight: lighter;
+  font-weight: 300;
 }
 
 .plate-content p {
@@ -1159,7 +1159,7 @@ ol {
     height: 90px;
     background: url("../images/germany.svg") no-repeat center / contain;
     position: relative;
-    top: 120px;
+    top: 170px;
     left: 167px;
   }
 
